--- a/COVID-19.html
+++ b/COVID-19.html
@@ -58,7 +58,8 @@
                         <img src="https://media.springernature.com/full/springer-static/image/art%3A10.1007%2Fs00134-020-06022-5/MediaObjects/134_2020_6022_Fig3_HTML.png?as=webp" alt="Summary of recommendations on the management of patients with COVID-19 and ARDS">
                     </li>
 
-                    <li>Target plateu pressure should be &lt; 30mmH2O </li>
+                    <li>Target plateu pressure should be &lt; 30mmH2O. </li>
+                    <li>Higher PEEP strategy is recommended.</li>
 
                 </ol>
             </li>
