--- a/COVID-19.html
+++ b/COVID-19.html
@@ -60,12 +60,35 @@
 
                     <li>Target plateu pressure should be &lt; 30mmH2O. </li>
                     <li>Higher PEEP strategy is recommended.</li>
-
+                    <li>Prone ventilation is recommended in those with moderate to severe ARDS for 12-16 hours</li>
+                    <li>As needed intermittent boluses of neuromuscular blocking agents can be used for moderate to severe ARDS</li>
+                    <li> In the event of persistent ventilator dyssynchrony, the need for ongoing deep sedation, prone ventilation, or persistently high plateau pressures, we suggest using a continuous NMBA infusion for up to 48 hours </li>
+                    <li>Pulmonary vasodilator may be used as a rescue therapy</li>
+                    <li>Inhaled nitric oxide has potential harm and no clear mortality benefit, therefore it is not recommended. It could cause rebound pulmonary vasoconstriction.</li>
+                    <li>Traditional recruitment maneuvers can be used for persistent hypoxia.</li>
+                    <li>VV-ECMO if nothing works</li>
                 </ol>
             </li>
+            <li><strong>COVID-19 treatment</strong>
+                <ol>
+                    <li>Cytokine Storm Syndrome: In vented patients, the presence of ARDS could justify systemic corticosteroids use.</li>
+                    <li>Empiric antibiotics should be given for patients with COVID-19 and respiratory failure</li>
+                    <li>Routine use of IVIG is not recommended</li>
+                    <li>Routine use of convalescent plasma is not recommended. Efficacy and safety is unclear.</li>
+                    <li>Routine use of lopinavir/ritonavir is not recommended. In a recent trial from China, the drug did not significantly reduce 28-day mortality. The drug has generally good safety profile, but may have interactions with many drugs
+                    </li>
+                    <li>In ICU patients, there is insufficient evidence to issue a recommendation regarding antiviral agents for COVID-19. More evidence is needed for remdisivir, rIFNs, and chloroquine or hydroxychloroquine, and tocilizumab.</li>
+                </ol>
+
+            </li>
+
 
         </ol>
         
         <p></p>
     </section>
+    <footer>
+        <a href=#top id="aboutlinktotop">Back to top</a>
+        <p>Created and designed by Chengda Zhang</p>
+    </footer>
 </body>
