--- a/COVID-19.html
+++ b/COVID-19.html
@@ -17,8 +17,9 @@
                 <li class="current"><a href="publications.html">Publications</a>
                     <ul>
                         <li><a href="publications.html#journal">Journal</a></li>
-                        <li><a href="publications.html#products">Products</a></li>
                         <li><a href="publications.html#conference">Conference</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#pubinprep">Under Preparation</a></li>
                     </ul>
                 </li>
                 <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
